--- a/index.html
+++ b/index.html
@@ -371,8 +371,7 @@
         // ゲームリセット
         function resetGame() {
             document.getElementById('gameOver').style.display = 'none';
-            initBoard();
-            renderBoard();
+            // TODO: ゲームリセットの処理を追加
         }
 
         // ゲーム開始
